--- a/content/01_journal/01_tidyverse.qmd
+++ b/content/01_journal/01_tidyverse.qmd
@@ -1,15 +1,15 @@
 ---
-title: "Tidyverse"
+title: "Tidyverse Challange"
 author: "Himadri Joy Bepari"
 ---
 
 ::: callout-note
-You can delete everything in here and start fresh.
+the solution code is saved on pilot/New folder in the Repository
 :::
 
-This is a `.qmd` file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+This is `.qmd` file contains the Journal for the R code challange for the Tidyverse
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+To learn more about the challange visit <https://www.startupengineer.io/_repos/_transfer/data_science/02_intro_tv/#challenge-i-classfas-fa-laptop-codei-nbsp>.
 
 # Text Formatting
 
@@ -23,10 +23,97 @@ superscript^2^ / subscript~2~
 
 > Blockquote
 
-# Headings
+# Solution
 
-## Header 2
-### Header 3
+Here is repository link to see the original code: <https://github.com/TUHHStartupEngineers/ss23-bdsb-HimJoy/tree/main/pilot/New%20folder> 
+**name: 1_Tidyverse_Challange.R**
+
+## Load libraries
+
+Library Tidyverse is used for the shaping and Warngling data properly.
+Library readxl is used to read the excel file.
+Library writexl is used to write the results in a excel file.
+Library lubridate is used to process the dates in data file properly.
+
+```{r}
+1 + 1
+```
+
+## Import Files 
+
+To import files read_excel() funtion used.
+
+```{r}
+1 + 1
+```
+::: callout-note
+files are not uploaded to repository because of large size
+:::
+
+one can find the data tabel in <https://www.startupengineer.io/_repos/_transfer/data_science/02_intro_tv/#business-case-i-classfas-fa-user-tiei-nbsp>
+
+## Examine the data
+
+glimpse() function is used to examine the data that should be processed.
+
+```{r}
+1 + 1
+```
+## Joining Data
+
+orderlines_tbl is left joined with bikes_tbl, on product id and bike id is equal and again it was left joined with bikeshops_tbl on customer id equal to bikeshop id. The results are put in bike_orderlines_joined_tbl.
+
+```{r}
+1 + 1
+```
+
+## Wrangling Data
+
+column location is devided into two column: 1.City 2. state.
+total price is calculated and added to the table using mutate() function.
+select() function is used remove remove unnecessary columns(Ex: gender).
+Columns are reordered using select().
+One column name is changed, other formatting name is done.
+
+```{r}
+1 + 1
+```
+
+## Business Insights
+
+Necessary column is selected for the insights, then grouped by state. Total price is calculated using summerize()& sum() function.
+Total Price data formatted into Euro.
+
+```{r}
+1 + 1
+```
+
+### Sales by state
+
+Sales by state table is visulized using ggplot(), Geometrics, Formatting and Labs.
+
+![Revenue by State](../../assets/img/Rplot_tidyverse_ch_1.1.jpeg)
+### Sales by Year and state
+Sales by year and state  table is visulized using ggplot(), Geometrics, Formatting and Labs.
+
+
+![Revenue by year and State](../../assets/img/Rplot_tidyverse_ch1.2.jpeg)
+## Writing Files
+To save resulted file as Excel file:
+```{r}
+bike_orderlines_wrangled_tbl %>%
+  write_xlsx("00_data/01_bike_sales/02_wragled_data_tidy_ch/bike_orderlines.xlsx")
+```
+To save resulted file as CSV file:
+```{r}
+bike_orderlines_wrangled_tbl %>%
+  write_xlsx("00_data/01_bike_sales/02_wragled_data_tidy_ch/bike_orderlines.csv")
+```
+To save resulted file as RDS file:
+```{r}
+bike_orderlines_wrangled_tbl %>%
+  write_xlsx("00_data/01_bike_sales/02_wragled_data_tidy_ch/bike_orderlines.rds")
+```
 #### Header 4
 ##### Header 5
 ###### Header 6
